Fixed tooltip text not wrapping

--- a/client/src/styles/ResultSummary.css
+++ b/client/src/styles/ResultSummary.css
@@ -116,12 +116,14 @@ h2#not-found {
 
 .tooltip-text {
   visibility: hidden;
-  width: 200px;
+  width: 250px;
   background-color: var(--bg-clr-secondary);
   color: var(--clr-font-white);
   text-align: left;
   padding: 8px;
   border-radius: 6px;
+  white-space: normal;
+  word-wrap: break-word;
 
   position: absolute;
   z-index: 1;
